--- a/fitness-website/package.json
+++ b/fitness-website/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@vercel/speed-insights": "^1.0.12",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
